/*
Copyright IBM Corp. 2017 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

                 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Modified java_package and other contents by Dingxuan on 2018-03-02
*/

syntax = "proto3";

option java_package = "org.bcia.julongchain.protos.node";
option go_package = "github.com/hyperledger/fabric/protos/peer";

package protos;

// ChaincodeQueryResponse returns information about each chaincode that pertains
// to a query in lscc.go, such as GetChaincodes (returns all chaincodes
// instantiated on a channel), and GetInstalledChaincodes (returns all chaincodes
// installed on a peer)
message SmartContractQueryResponse {
  repeated SmartContractInfo smart_contracts = 1;
}

// ChaincodeInfo contains general information about an installed/instantiated
// chaincode
message SmartContractInfo {
  string name = 1;
  string version = 2;
  // the path as specified by the install/instantiate transaction
  string path = 3;
  // the chaincode function upon instantiation and its arguments. This will be
  // blank if the query is returning information about installed chaincodes.
  string input = 4;
  // the name of the ESCC for this chaincode. This will be
  // blank if the query is returning information about installed chaincodes.
  string essc = 5;
  // the name of the VSCC for this chaincode. This will be
  // blank if the query is returning information about installed chaincodes.
  string vssc = 6;
  // the chaincode unique id.
  // computed as: H(
  //                H(name || version) ||
  //                H(CodePackage)
  //              )
  bytes id = 7;
}

// ChannelQueryResponse returns information about each channel that pertains
// to a query in lscc.go, such as GetChannels (returns all channels for a
// given peer)
message GroupQueryResponse {
  repeated GroupInfo groups = 1;
}

// ChannelInfo contains general information about channels
message GroupInfo {
  string group_id = 1;
}
